--- a/src/config/translations/locales/en.json
+++ b/src/config/translations/locales/en.json
@@ -1,4 +1,6 @@
 {
   "welcome_to_webo_app": "Welcome to Webo App!",
-  "change_language": "Change Language"
+  "change_language": "Change Language",
+  "login": "Login",
+  "welcome": "Welcome {{name}}"
 }
